--- a/plugins-sdk/ext/ldcportal-ext/docroot/WEB-INF/ext-impl/src/portal-ext.properties
+++ b/plugins-sdk/ext/ldcportal-ext/docroot/WEB-INF/ext-impl/src/portal-ext.properties
@@ -4,7 +4,7 @@ breadcrumb.show.guest.group=false
 message.boards.thread.views=flat
 message.boards.thread.views.default=flat
 
-#portal.ctx=/ldcportal
+portal.ctx=/ldcportal
 
 users.reminder.queries.enabled=false
 users.reminder.queries.custom.question.enabled=false
